@@ -40,7 +40,7 @@
       xmlns:metal="http://xml.zope.org/namespaces/metal">\n
 <head>\n
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">\n
-<title>The 4 How-to related to Sales</title>\n
+<title>How-to Sale Order / Packing List / Invoices / Payment</title>\n
 </head>\n
 <body>\n
 <table cellpadding="1" cellspacing="1" border="1">\n
